wordpress-tutorial/wordpress/gce-ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: wordpress-ingress
  namespace: wordpress-tutorial # Match with namespace
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "gce"
spec:
  tls:
    - hosts:
      - test.jamlab.cloud # [TODO] Change this to your host
      secretName: test-jamlab-cloud-tls # [TODO] Change this to anything
  rules:
  - host: test.jamlab.cloud # [TODO] Change this to your host
    http:
      paths:
      - path: /*
        backend:
          serviceName: wordpress-service
          servicePort: 80
